--- a/settings.json
+++ b/settings.json
@@ -7,10 +7,10 @@
 	"anticall": false,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@ZeeoneOfc",
-	"ownername": "ZeeoneOfc",
+	"ownerNumber": "628170754580",
+	"ownerNumberr": "628170754580",
+	"cr": "@Baal",
+	"ownername": "Baal",
 	"botname":"Ａʟᴘʜᴀʙᴏᴛ",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
